--- a/JXGIS.FZToponymy/JXGIS.FZToponymy.csproj
+++ b/JXGIS.FZToponymy/JXGIS.FZToponymy.csproj
@@ -148,6 +148,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Business\Common\Enums.cs" />
+    <Compile Include="Business\Common\UploadFileUtil.cs" />
+    <Compile Include="Models\Domain\MPOFUPLOADFILES.cs" />
     <Compile Include="Utils\CustomHandleErrorAttribute.cs" />
     <Compile Include="Utils\CustomFilterAttribute.cs" />
     <Compile Include="Business\Common\DataFilter.cs" />
@@ -167,6 +170,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Log4net\LogHelper.cs" />
     <Compile Include="Utils\Log4net\ObjectConverter.cs" />
+    <Compile Include="Utils\PictureUtils.cs" />
     <Compile Include="Utils\ReturnObj\Error.cs" />
     <Compile Include="Utils\LoginUtils.cs" />
     <Compile Include="Utils\NetHelper.cs" />
@@ -202,6 +206,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="UploadFiles\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
