--- a/JXGIS.FZToponymy/JXGIS.FZToponymy.csproj
+++ b/JXGIS.FZToponymy/JXGIS.FZToponymy.csproj
@@ -150,7 +150,17 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Business\Common\Enums.cs" />
     <Compile Include="Business\Common\UploadFileUtil.cs" />
+    <Compile Include="Controllers\DistrictController.cs" />
+    <Compile Include="Controllers\UploadFileController.cs" />
+    <Compile Include="Models\Domain\DMOFUPLOADFILES.cs" />
+    <Compile Include="Models\Domain\HOUSE.cs" />
+    <Compile Include="Models\Domain\HOUSEBZ.cs" />
+    <Compile Include="Models\Domain\HOUSEBZOFUPLOADFILES.cs" />
+    <Compile Include="Models\Domain\HSP.cs" />
+    <Compile Include="Models\Domain\MP.cs" />
     <Compile Include="Models\Domain\MPOFUPLOADFILES.cs" />
+    <Compile Include="Models\Domain\ROAD.cs" />
+    <Compile Include="Models\Domain\VILLAGE.cs" />
     <Compile Include="Utils\CustomHandleErrorAttribute.cs" />
     <Compile Include="Utils\CustomFilterAttribute.cs" />
     <Compile Include="Business\Common\DataFilter.cs" />
@@ -207,6 +217,8 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="UploadFiles\" />
+    <Folder Include="Views\District\" />
+    <Folder Include="Views\UploadFile\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
